# XAI_metrics

./: .gitignore  README.md  pyproject.toml  requirements.txt
XAI_metrics/: __init__.py  config.yaml
XAI_metrics/base/: __init__.py  base.py  registry.py
XAI_metrics/metrics/: __init__.py  autodiscover.py
XAI_metrics/metrics/complexity/: __init__.py  complexity_metric.py  sparseness.py
XAI_metrics/metrics/faithfulness/: __init__.py  consistency.py  faithfulness_estimate.py  monotonicity.py  monotonicity_correlation.py  sensitivity_n.py  sufficiency.py
XAI_metrics/metrics/fidelity/: __init__.py
XAI_metrics/metrics/fidelity/completeness/: __init__.py  completeness_metric.py
XAI_metrics/metrics/fidelity/soundness/: __init__.py  non_sensitivity.py
XAI_metrics/metrics/robustness/: __init__.py  local_lipschitz_estimate.py  max_sensitivity.py  relative_input_stability.py  relative_output_stability.py
XAI_metrics/metrics/sensitivity/: __init__.py  avg_sensitivity.py
XAI_metrics/runner/: __init__.py  runner.py
prueba/: config.py  data_processing.py  evaluation.py  models.py  prueba.py  requirements.txt  utils.py  xai.py
