[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XAI-metrics"
version = "0.1.0"
description = "Explainability metrics library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "quantus",
]
license = { text = "MIT" }
authors = [
  { name = "Maria Teresa Alba Rueda", email = "maytalbada@gmail.com" }
]
keywords = ["XAI","metrics","explainability"]
classifiers = [
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["XAI_metrics*"]